--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   cherry_toast: ^1.2.1
   firedart: ^0.9.2
-  fluttertoast: ^8.2.2
-  motion_toast: ^2.6.8
   curved_navigation_bar: ^1.0.3
   intl: ^0.18.1
-  simple_barcode_scanner: ^0.0.8
+  simple_barcode_scanner: ^0.0.8-custom
   webview_flutter_web: ^0.2.2+1
   path_provider: ^2.0.15
   file_picker: ^5.3.1
@@ -55,6 +53,9 @@ dependencies:
   excel: ^2.1.0
   csv: ^5.0.2
   table_calendar: ^3.0.9
+  pdf: ^3.10.1
+  flutter_datetime_picker: ^1.5.1
+
 
 
 
